# h3-projektv2-24q2h3-gruppe3-txp

./: .gitignore  README.md  package-lock.json  package.json
ARDUINO GAME CONSOLE - TxP [TEIS OG PHAMISHAN]/1. Software/sketch_release/: sketch_release.ino
ARDUINO GAME CONSOLE - TxP [TEIS OG PHAMISHAN]/2. README [Opsætningsguide]/: README.md
ARDUINO GAME CONSOLE - TxP [TEIS OG PHAMISHAN]/4. Dokumentation og diagrammer/: ER_DIAGRAMMER_FINAL.drawio  figma.md  login-flowchart.drawio
Arduino/Sketches/: sketch_demo.ino
Arduino/Sketches/sketch_release/: sketch_release.ino
Backend/: README.md  index.ts
Database/: README.md
Dokumentation/: Case beskrivelser.md
Dokumentation/Flowcharts/: .$login-flowchart.drawio.bkp
Frontend/user_interface/: Cargo.toml  README.md  build.rs  todo.md
Frontend/user_interface/src/: main.rs
Frontend/user_interface/ui/: common.slint  dashboard.slint  leaderboards.slint  login.slint  mainwindow.slint  profile.slint  signup.slint
prisma/: schema.prisma
prisma/migrations/20240415083326_added/: migration.sql
prisma/migrations/20240502082217_update/: migration.sql
prisma/migrations/20240502082423_renamed_elements/: migration.sql
prisma/migrations/20240502104533_game_id/: migration.sql
prisma/migrations/20240606064043_arduino_table/: migration.sql
