[package]
name = "user_interface"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
dotenv = "0.15.0"

[build-dependencies]
slint-build = "1.5"

